responses finished, now is usable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
     src/server/server.c
     src/server/vector.c
     src/transaction/request.c
+    src/transaction/response.c
 )
 
 add_executable(ldhcp ${SOURCES})
