DHCP release support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(LDHCP)
 set(CMAKE_C_COMPILER gcc)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
 file(MAKE_DIRECTORY build)
 
 set(SOURCES
